source/css/scss/objects/_header.scss
/*------------------------------------*\
    $HEADER
\*------------------------------------*/

.a-header {
  height: 108px;
  padding-top: 36px;
  .a-logo {
    max-width: 110px;
    float: left;
    margin-right: $spacer;
    margin-top: -2px;
    @include media-breakpoint-up(lg) {
      max-width: 142px;
      margin-top: 0px;
    }
  }
}

// Header options
.a-header-options {
	margin-top: -10px;
	position: absolute;
	right: 100px;
	z-index: 100;

	@include media-breakpoint-up(sm) {
		right: 100px;
	}

	@include media-breakpoint-up(md) {
		float: right;
		position: relative;
		right: 0px;
		left: auto;
		margin-top: -7px;
	}
	@include media-breakpoint-up(lg) {
		margin-top: -4px;
	}

	.nav-link {
    padding: 10px 8px;
    border-radius: 0;
    @include media-breakpoint-up(lg) {
      padding: 12px;
    }
  }
  // Language switcher (Button)
  .a-languageSwitcher {
    margin-top: -6px;
    font-size: 14px;
    font-family: $font-medium;
    font-weight: $font-weight-medium;
    border: none;
    position: absolute;
    right: 18px;
    background: transparent;
    color: $blue-dark;
    @include media-breakpoint-up(sm) {
      position: relative;
      right: 0px;
    }
    @include media-breakpoint-up(md) {
      margin-top: 2px;
    }
    &:hover,
    &:focus,
    &:active {
      color: $blue-dark;
      border: none;
    }
    i {
      font-size: 30px;
      vertical-align: middle;
      @include media-breakpoint-up(sm) {}
    }
    &:after {
      display: none;
      @include media-breakpoint-up(md) {
        display: inline-block;
      }
    }
  }
  .a-personSwitcher {
    padding-right: 0;
  }
}

// Person switcher (Button)
.a-personSwitcher {
  margin-top: -6px;
  font-size: 14px;
  font-family: $font-medium;
  font-weight: $font-weight-medium;
  border: none;
  position: absolute;
  right: 0;
  text-align: right;
  background: transparent;
  color: $blue-dark;
  &:after {
    display: none;
  }
  @include media-breakpoint-up(sm) {
    position: relative;
    right: 0px;
  }
  &:hover,
  &:focus,
  &:active {
    color: $blue-dark;
    border: none;

    .a-personSwitcher-icon {
      background: $white-hover;
    }
  }
  .a-personSwitcher-name {
    text-align: right;
    vertical-align: middle;
    max-width: 90px;
    white-space: nowrap;
    overflow: hidden !important;
    text-overflow: ellipsis;
    display: none;
    @include media-breakpoint-up(sm) {
      display: inline-block;
    }
    @include media-breakpoint-up(lg) {
      max-width: 120px;
    }
    @include media-breakpoint-up(xl) {
      max-width: 220px;
    }
  }
  .a-personSwitcher-icon {
    border: 1px solid $blue-dark;
    border-radius: 36px;
    margin-top: -1px;
    vertical-align: middle;
    font-size: 18px;
    margin-top: 0px;
    padding-top: 7px;
    text-align: center;
    height: 36px;
    width: 36px;


    @include media-breakpoint-up(md) {
      font-size: 18px;
      margin-top: 0px;
    }
  }
}

//Language an personSwitch list (dropdown)
.a-dropdown-languages,
.a-dropdown-personswitchList {
  position: relative;
  color: $black;
  border-radius: 0;
  .dropdown-item {
    white-space: normal;
    border-bottom: 1px solid $grey-light;
    padding: $spacer*1.5;
    &:hover {
      color: $black;
    }
    .a-flag {
      max-width: 48px;
      margin-right: $spacer;
      float: left;
      margin-top: 2px;
      width: 100%;
    }
    p {
      margin-bottom: 0;
      font-size: 14px;
      word-wrap: break-word;
      ;
    }
    &:last-child {
      border-bottom: none;
    }
  }
  // Arrow position when not inside header
  &.a-dropdownTriangle:after {
    left: 72px;
    margin-left: 0px;
  }

  // Log out
  .a-link-logout {
    position: absolute;
    line-height: 19px;
    right: 36px;
    top: 24px;
    padding-bottom: 0;
  }
}

// If switchList is inside header, make absolute and positioned
.a-header {
	.a-dropdown-languages,
	.a-dropdown-personswitchList {
		width: 280px;
		left: auto;
		padding: 0;
		position: absolute;
		top: 57px;
		z-index: 10001;

		@media all and (min-width: 360px) {
			width: 320px;
		}

		@include media-breakpoint-up(sm) {
      width: 420px;
		}

	}
  .a-dropdown-languages {
    right: -90px;

    @include media-breakpoint-up(sm) {
			right: -38px;
      top: 55px;
		}
    @include media-breakpoint-up(md) {
			right: -24px;
      top: 55px;
		}
    &.a-dropdownTriangle:after { 
			left: auto;
			right: 79px;

			@include media-breakpoint-up(md) {
				right: 8px;
			}
			@include media-breakpoint-up(lg) {
				right: 12px;
			}
		}
  }
	.a-dropdown-personswitchList {
		right: -87px;

		@include media-breakpoint-up(sm) {
			right: -12px;
      top: 55px;
		}

		@include media-breakpoint-up(md) {
			width: 420px;
      top: 55px;
		}

		&.a-dropdownTriangle:after{
			right: 65px;

			@include media-breakpoint-up(sm) {
				right: 0px;
			}
			@include media-breakpoint-up(md) {
				right: 2px;
			}
		}

	}

}

// On large version
.a-dropdown-personswitchList.a-dropdown-personswitchList-large.a-dropdownTriangle:after {
  left: auto;
  right: 15px;
}

// When switcher panel is open
.nav-pills .nav-item.open .nav-link.a-languageSwitcher,
.nav-pills .nav-item.open .nav-link.a-personSwitcher {
  background: transparent;
  color: $blue-dark;
  text-align: right;
}

// Hide .dropdown-menu (Language and personswitcher)
// ONLY when inside a collapse-btn (.dropdown)
.dropdown-menu,
.dropdown-menu {
  display: block;
}

.dropdown .dropdown-menu,
.dropdown .dropdown-menu {
  display: none;
}

.open>.dropdown-menu {
  display: block;
}

// LOGO
.a-logo {
  height: 24px;
  width: 100%;
  margin-bottom: 0;
}


/*------------------------------------*\
    $GLOBAL NAVIGATION (in header)
\*------------------------------------*/

.a-globalNav {
  .a-globalNav-logo {
    float: left;
    border: none;
    position: relative;
    display: block;
    z-index: 1;
    @include media-breakpoint-up(lg) {
      margin-top: 2px;
    }
    &:focus {
      border: none;
      box-shadow: none !important;
    }
    &:before {
      content: "";
      width: 124%;
      height: 48px;
      position: absolute;
      left: -11%;
      top: -10px;
      cursor: pointer;
      z-index: -1;
    }
  }
  .navbar-toggler {
    background: $blue-dark;
    color: $white;
    float: right;
    margin-top: -5px;
    width: 60px;
    font-size: 16px;
    padding: 8px 0;
    &:after {
      content: 'meny';
    }
    &[aria-expanded="true"]:after {
      content: 'lukk';
    }
  }
  .navbar-toggleable-sm {
    width: 100%;
    position: absolute;
    left: 0;
    overflow: visible;
    @include media-breakpoint-up(md) {
      position: relative;
    }
  }
}

.a-globalNav-main {
  margin-top: 60px;
  padding-top: $spacer*3;
  background: $white;
  position: absolute;
  z-index: 1000;
  min-height: 100%;
	left: 0;
	overflow: auto;
	box-shadow: 2px 2px 9px 1px rgba(137,137,137,0.5);

	.indicator {
		font-size: 9px;
		margin-left: 12px;
		transition: all .25s ease-in-out;
		-webkit-transition: all .25s ease-in-out;
		display: inline-block;
		line-height: 20px;
		padding-top: 3px;
		vertical-align: middle;

		&.flip {
			transform: rotate(-180deg);
			-webkit-transform: rotate(-180deg);
			vertical-align: middle;
		}
	}

	.a-dropdownTriangle{
		box-shadow: none;
	}

	@include media-breakpoint-up(md) {
		box-shadow: none;
		margin-top: 2px;
		background: transparent;
		position: relative;
	  min-height: none;
		z-index: auto;
		overflow: visible;
		padding-top: 0;

		.a-dropdownTriangle{
		  background: transparent;
			box-shadow: none;
		}

		.a-dropdownTriangle:after{
		  display: none;
		}
	}

	@include media-breakpoint-up(lg) {
		margin-top: -2px;
	}

	.a-dropdownTriangle:after{
	  margin-left: auto;
		right: 26px;
	}

	ul {
		list-style: none;
		float: left;
	}

	li {
		float: left;
		width: 100%;
		padding: 0 $spacer*2;

		@include media-breakpoint-up(md) {
			width: auto;
			margin-left: $spacer*2;
			padding: 0;

			&:first-child {
				margin-left: $spacer;
			}
		}

		@include media-breakpoint-up(lg) {
			margin-left: $spacer*3;

			&:first-child {
				margin-left: $spacer*3;
			}
		}

		@include media-breakpoint-up(xl) {
			margin-left: $spacer*3;

			&:first-child {
				margin-left: $spacer*4;
			}
		}

		a {
			font-size: 18px;
			border: none;
			font-family: $font-medium; font-weight: $font-weight-medium;
			padding: $spacer $spacer;
			display: block;
			border-bottom: 1px solid $blue-dark;

			&:hover,
      &:focus,
      &:active {
				color: $blue;
			}

			&.globalNav-active {
				color: $black;
			}

			@include media-breakpoint-up(md) {
				padding: 0;
				padding-bottom: 3px;
				display: inline;
				border-bottom: none;

				&:hover,
				&:active,
				&:focus {
					color: $blue-dark;
				}

				&.globalNav-active {
			    border-bottom: 3px solid $blue-dark;
					padding-bottom: 3px;
					color: $blue-dark;
				}
			}

			@include media-breakpoint-up(lg) {
				font-size: 24px;
				padding-bottom: 3px;
			}



			&.globalNav-active:before {
		    content: "";
		    position: absolute;
		    z-index: -1;
		    left: 50%;
		    right: 50%;
		    bottom: 0;
		    background: #0062ba;
		    height: 3px;
			}

		}

		.a-link-tel {
			font-family: $font-bold; font-weight: $font-weight-bold;
			padding-top: $spacer*2;
      padding-bottom: $spacer*2;
      margin-left: -5px;
		}
	}

	li:last-child > a{
		border-bottom: none;
	}

	.a-dropdownTriangle .a-dropdownTriangle:after {
		display: none
	}

	.dropdown-menu {
		position: static;
		border-radius: 0px;
		border: none;
		width: inherit;
		box-sizing: content-box;
		margin: 0;
		margin-left: 24px;
		margin-right: 24px;
		color: $black;

		&.a-dropdown-languages {
			height: 0px;
			width: 0px;
			min-width: 0px;
			overflow: hidden;
			transition: height 0.25s ease-in-out;
			-webkit-transition: height 0.25s ease-in-out;

			&.expand {
				height: 360px;
			  width: inherit;
				min-width: 160px;
				border-bottom: 1px solid #0062ba;
			}

			&.after-collapse {
				min-width: 0px;
				width: 0px;
			}
		}

		@include media-breakpoint-up(md) {

			&.a-dropdown-languages {
				display: none
			}

		}

		.dropdown-item {
			border: none;
			display: inline-block;

			img {
				margin: 0px;
				margin-right: 24px;
				// height: 36px
			}

			&:last-of-type {
				img {
					margin-top: -6px;
					margin-bottom: -6px;
				}
			}

			p {
		    line-height: 36px;
			}

			span:last-of-type, p>br {
				display: none
			}
		}
	}

}


/*----------------------------------------*\
    $ Different color versions of header
\*----------------------------------------*/

// Dark background, white text
.a-darkBackground {
	.a-hvr-underline:hover {
    @include media-breakpoint-up(md) {
  		border-color: $white;
    }
	}
  .a-personSwitcher-icon {
    border: 1px solid $white;
  }

	@include media-breakpoint-up(md) {
		.a-globalNav-main li a {
			color: $white;
		}
	}
	.a-header-options .a-languageSwitcher,
	.a-header-options .a-personSwitcher {
    color: $white;
  }
  .nav-pills .nav-item.open .nav-link.a-languageSwitcher,
  .nav-pills .nav-item.open .nav-link.a-personSwitcher {
    color: $white;
  }
}

